metadata and pull request template

--- a/dist.ini
+++ b/dist.ini
@@ -5,11 +5,22 @@ copyright_year      = 2023
 license             = Perl_5
 
 [@Author::ETHER]
-:version = 0.097
+:version = 0.154
+bugtracker = github
+Test::MinimumVersion.max_target_perl = 5.020    ; may go higher later on
+Git::GatherDir.exclude_filename = pull_request_template.md
+Test::ReportPrereqs.include[0] = JSON::PP
+Test::ReportPrereqs.include[1] = Cpanel::JSON::XS
+Test::ReportPrereqs.include[2] = JSON::XS
+Test::ReportPrereqs.include[3] = Mojolicious
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
 
 [MetaResources]
-x_IRC = irc://irc.perl.org/#perl-qa
-x_MailingList = http://lists.perl.org/list/perl-qa.html
+x_IRC = irc://irc.libera.chat/#mojo
+
+[Prereqs / RuntimeRequires]
+Role::Tiny = 2.000001
+OpenAPI::Modern = 0
+Mojolicious = 9.0
