allow constructing an OpenAPI::Modern object using config values

--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,9 @@ Role::Tiny = 2.000001
 OpenAPI::Modern = 0
 Mojolicious = 9.0
 
+[Prereqs / RuntimeRecommends]
+Mojolicious::Plugin::OpenAPI::Modern = 0.007
+
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
 
